set-depl.yaml
---
apiVersion : apps/v1
kind: Deployment
metadata:
  name: nginx
  labels:
    app : nginx
spec:
  selector:
    matchLabels:
      project: xyz
  template:
    metadata:
      labels:
        project: xyz   # Service will look for those PODS Labels!!!
    spec:
      containers:
        - name : nginx
          #image: 837742272167.dkr.ecr.eu-central-1.amazonaws.com/bar:ngap10
          image: nginx:latest
          #args:
          #- /bin/bash
          #- -c
          #- touch /hc;
          livenessProbe:
            exec:
              command:
              - service
              - nginx
              - status
            initialDelaySeconds: 5
            periodSeconds: 5
          readinessProbe:
            exec:
              command:
              - service
              - nginx
              - status
            initialDelaySeconds: 5
            periodSeconds: 5
          ports:
            - containerPort: 80

---
apiVersion : apps/v1
kind: Deployment
metadata:
  name: apache
  labels:
    app : apache
spec:
  selector:
    matchLabels:
      project: xyz
  template:
    metadata:
      labels:
        project: xyz   # Service will look for those PODS Labels!!!
    spec:
      containers:
        - name : apache
          image: 837742272167.dkr.ecr.eu-central-1.amazonaws.com/bar:ap21
          livenessProbe:
            exec:
              command:
              - service
              - apache2
              - status
            initialDelaySeconds: 5
            periodSeconds: 5
          readinessProbe:
            exec:
              command:
              - service
              - apache2
              - status
            initialDelaySeconds: 5
            periodSeconds: 5
          ports:
            - containerPort: 80


---
apiVersion: v1
kind: Service
metadata:
  name: my-autoscaling-pod-service
  labels:
     env  : prod
spec:
  type: LoadBalancer
  selector:
    project: xyz      # Selecting PODs with those Labels
  ports:
    - name      : for-ngap-container
      protocol  : TCP
      port      : 80  # Port on Load Balancer
      targetPort: 80  # Port on Pod
    - name      : for-ap-container
      protocol  : TCP
      port      : 8080
      targetPort: 80
