alb.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: "eks-alb-testing-deployment"
spec:
  selector:
    matchLabels:
      app: "eks-alb-testing-web"
  template:
    metadata:
      labels:
        app: "eks-alb-testing-web"
    spec:
      containers:
      - image: 837742272167.dkr.ecr.eu-central-1.amazonaws.com/bar:ngap20
        livenessProbe:
          httpGet:
            path: /
            port: 80
          failureThreshold: 1
          periodSeconds: 5
        readinessProbe:
          httpGet:
            path: /
            port: 80
          failureThreshold: 1
          periodSeconds: 5
        imagePullPolicy: Always
        name: "eks-alb-testing-web-nginx"
        ports:
        - containerPort: 80  
          
---
apiVersion: v1
kind: Service
metadata:
  name: "eks-alb-testing-web-service"
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: NodePort
  selector:          
    app: "eks-alb-testing-web"

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: "eks-alb-testing-deployment-apache"
spec:
  selector:
    matchLabels:
      app: "eks-alb-testing-web-apache"
  template:
    metadata:
      labels:
        app: "eks-alb-testing-web-apache"
    spec:
      containers:
      - image: 837742272167.dkr.ecr.eu-central-1.amazonaws.com/bar:ap20
        livenessProbe:
          httpGet:
            path: /
            port: 80
          failureThreshold: 1
          periodSeconds: 5
        readinessProbe:
          httpGet:
            path: /
            port: 80
          failureThreshold: 1
          periodSeconds: 5
        imagePullPolicy: Always
        name: "eks-alb-testing-web-apache"
        ports:
        - containerPort: 80  
          
---
apiVersion: v1
kind: Service
metadata:
  name: "eks-alb-testing-web-service-apache"
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: NodePort
  selector:          
    app: "eks-alb-testing-web-apache"

    
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: "eks-alb-testing-web-ingress"
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
  labels:
    app: bttrm-eks-dev-0-web
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: "eks-alb-testing-web-service"
              servicePort: 80
          #- path: /
          #  backend:
          #    serviceName: "eks-alb-testing-web-service-apache"
          #    servicePort: 80
