ing.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-paths

spec:
  rules:
  - host: 
    #http: `kubectl get svc my-autoscaling-pod-service -o json | jq .status.loadBalancer.ingress[0].hostname`
      http: 
      paths:
      - path: "/"
        backend:
          serviceName: nginx
          servicePort: 80

      #- path: "/"
      #  backend:
      #    serviceName: apache
      #    servicePort: 8080
